--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Ben Hampson",
-  "url": "https://ben-hampson.github.io/",
+  "url": "https://ben-hampson.github.io",
   "description": "",
   "thumbnailUrl": "https://ben-hampson.github.io/favicon.ico",
   "sameAs": [
@@ -63,7 +63,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://ben-hampson.github.io/" accesskey="h" title="Ben Hampson (Alt + H)">Ben Hampson</a>
+            <a href="https://ben-hampson.github.io" accesskey="h" title="Ben Hampson (Alt + H)">Ben Hampson</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -110,7 +110,7 @@ Heading 2 Heading 3 </p>
     </main>
     
 <footer class="footer">
-    <span>&copy; 2021 <a href="https://ben-hampson.github.io/">Ben Hampson</a></span>
+    <span>&copy; 2021 <a href="https://ben-hampson.github.io">Ben Hampson</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
